# pizzeria-design-patterns

./: Dockerfile  docker-compose.yml  main.py  pyproject.toml  settings.json  settings_alt.json
configuration/: length_restrictions.json  settings.json
curl/: send_requests.sh
data/: addresses.json  storage_transactions.json  storages.json  units_data.json
docs/: receipt2.md  receipt3_mod.md
logs/: nomenclatures_after_change_and_save.json
migration/: v1_create_tables.sql
modules/configuration/: length_restricions_configuration.py
modules/domain/: settings.py
modules/exception/: bad_argument_exception.py  conf_file_not_found.py
modules/repository/: data_repository.py  measurment_unit_repository.py  nomenclature_group_repository.py  nomenclature_repository.py  recipe_repository.py
modules/settings/: settings_manager.py  settings_model.py  settings_validator.py
nginx/: nginx.conf
reports/: report.csv  report.docx  report.json  report.md  report.rtf  report.xls  report.xlsx  report.xml  tbs_example.json
src/: main.py  server.py  swagger.yml
src/modules/dto/: tbs.py  (+6 more)
test/: test_converters.py  test_models.py  test_recipes.py  test_reports.py  test_restrictions_loader.py  test_validator.py
tests/: test_converters.py  test_deserialization.py  test_dump.py  test_models.py  test_observer.py  test_prototype.py  test_recipes.py  test_reports.py  test_rest_api.py  test_rest_api_utils.py  test_restrictions_loader.py  test_serialization.py  test_storage_turnovers.py  test_tbs.py  test_transactions_generator.py  test_turnovers_payload.py  test_validator.py
(+141 files in other folders)
