[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Egor Pristavka <pristavkaegor03@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyrtf3 = "^0.47.5"
python-docx = "^1.1.2"
openpyxl = "^3.1.5"
xmltodict = "^0.13.0"
uvicorn = "^0.31.0"
fastapi = "^0.115.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
pizzeria = "src.server:main"
test = "scripts:test"
